[package]
name = "watchdog"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde"]
cli = ["dep:clap"]

[dev-dependencies]
tokio-test = "0.4.2"

[dependencies]
clap = { version = "3", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
tokio = { version = "1", features = ["macros", "sync", "time", "rt"] }
