[package]
name = "simple-tokio-watchdog"
version = "0.2.0"
edition = "2021"
authors = ["rafael bachmann <rafael.bachmann.93@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/barafael/watchdog"
description = "Pretty simple but bulletproof watchdog actor."

[features]
serde = ["dep:serde"]
cli = ["dep:clap"]

[dev-dependencies]
tokio-test = "0.4.2"
tokio = { version = "1", features = ["full"] }

[dependencies]
clap = { version = "4.3", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
tokio = { version = "1", features = ["macros", "sync", "time", "rt"] }
